# Fingrid-dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.prod.yml  docker-compose.yml  env.md  makefile
.github/workflows/: ci-cd.yml  ci.yml
backend/: .env.test  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  analytics.py  entsoe.py  export.py  fingrid.py
backend/app/core/: config.py  security.py
backend/app/middleware/: __init__.py  monitoring.py  rate_limiting.py
backend/app/models/: energy.py
backend/app/services/: __init__.py  cache_service.py  entsoe_client.py  entsoe_service.py  fingrid_client.py.OLD_BACKUP  fingrid_service.py
backend/tests/: __init__.py  conftest.py  test_analytics_routes.py  test_api.py  test_entsoe_service.py  test_export_routes.py  test_fingrid_client.py  test_integration.py  test_middleware.py  test_security.py
docs/: API.md  DEPLOYMENT.md
frontend/: Dockerfile  jest.config.js  nginx.conf  package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  setuptests.ts
frontend/src/components/: EnergyChart.tsx  MetricCard.tsx  PriceChart.tsx
frontend/src/types/: energy.ts
k8s/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  namespace.yaml  redis-deployment.yaml  redis-pvc.yaml  secret.yaml
scripts/: deploy.sh  dev-start.sh  health-check.sh  setup.sh
